Add font-family css variables
Switching to css variables from scss will help us to replace those fonts
easier in child themes by just overriding the variable. Same as we do for
campaign themes.

--- a/assets/src/scss/base/_body.scss
+++ b/assets/src/scss/base/_body.scss
@@ -10,7 +10,7 @@ body {
   overflow-y: hidden;
 
   &.search {
-    font-family: $roboto;
+    font-family: var(--headings--font-family);
   }
 
   .mejs-container {
