--- a/assets/src/scss/base/_variables.scss
+++ b/assets/src/scss/base/_variables.scss
@@ -1,4 +1,9 @@
 // Fonts
+:root {
+  --body--font-family: "Lora", serif;
+  --headings--font-family: "Roboto", sans-serif;
+}
+
 $roboto:     "Roboto", sans-serif;
 $lora:       "Lora", serif;
 
