--- a/assets/src/scss/layout/_cookies.scss
+++ b/assets/src/scss/layout/_cookies.scss
@@ -1,5 +1,5 @@
 .cookie-notice {
-  font-family: $roboto;
+  font-family: var(--headings--font-family);
   z-index: 100;
   position: fixed;
   width: 100vw;
