--- a/assets/src/scss/layout/_navbar.scss
+++ b/assets/src/scss/layout/_navbar.scss
@@ -11,7 +11,7 @@ $navbar-default-height: 60px;
     box-shadow: none;
     color: $white;
     fill: $white;
-    font-family: $roboto;
+    font-family: var(--headings--font-family);
     font-size: $font-size-sm;
   }
 
