--- a/assets/src/scss/layout/navbar/_burger-menu.scss
+++ b/assets/src/scss/layout/navbar/_burger-menu.scss
@@ -24,7 +24,7 @@ $transition-duration: .2s;
   _-- {
     background: $white;
     color: $grey-80;
-    font-family: $roboto;
+    font-family: var(--headings--font-family);
   }
 
   position: fixed;
