--- a/assets/src/scss/layout/_page-section.scss
+++ b/assets/src/scss/layout/_page-section.scss
@@ -2,7 +2,7 @@
   text-transform: none;
   color: inherit;
   font-weight: var(--headings--font-weight, bold);
-  font-family: var(--headings--font-family, $roboto);
+  font-family: var(--headings--font-family);
   font-size: 2.5rem;
   margin-bottom: $sp-2;
 }
