--- a/assets/src/scss/pages/_category.scss
+++ b/assets/src/scss/pages/_category.scss
@@ -1,9 +1,9 @@
 .category {
   .search-result-list-item {
-    font-family: $roboto;
+    font-family: var(--headings--font-family);
   }
 
   .search-result-item-content {
-    font-family: $lora;
+    font-family: var(--body--font-family);
   }
 }
