--- a/assets/src/scss/pages/post/_article-content.scss
+++ b/assets/src/scss/pages/post/_article-content.scss
@@ -36,7 +36,7 @@
     }
 
     .cover-card-tag {
-      font-family: $roboto;
+      font-family: var(--headings--font-family);
     }
   }
 
@@ -328,7 +328,7 @@
 
   .wp-caption-text {
     font-size: $font-size-xxs;
-    font-family: $roboto;
+    font-family: var(--headings--font-family);
     line-height: 1.4;
     margin-bottom: 0;
     padding-top: $sp-1;
