PLANET-6987 Update Donate button colors for new identity
These changes are only visible when the new identity styles are enabled

--- a/assets/src/scss/new-identity/style.scss
+++ b/assets/src/scss/new-identity/style.scss
@@ -25,4 +25,9 @@
   --post-tag-button--hover--border-color: var(--gp-green-200);
   --post-tag-button--hover--color: var(--grey-900);
   --post-tag-button--visited--color: var(--grey-900);
+  --button-donate--background: var(--gp-green-400);
+  --button-donate--color: var(--grey-900);
+  --button-donate--visited--color: var(--grey-900);
+  --button-donate--hover--color: var(--grey-900);
+  --button-donate--hover--background: var(--gp-green-500);
 }
