--- a/assets/src/scss/new-identity/style.scss
+++ b/assets/src/scss/new-identity/style.scss
@@ -9,4 +9,10 @@
   --block-columns--step-number--background: var(--gp-green-100);
   --block-columns--step-number--color: var(--grey-900);
   --block-columns--card-header--background: var(--p4-dark-green-800);
+  --button-primary--background: var(--p4-action-yellow-500);
+  --button-primary--disabled--background: var(--p4-action-yellow-500);
+  --button-primary--hover--background: var(--p4-action-yellow-600);
+  --button-primary--color: var(--grey-900);
+  --button-primary--visited--color: var(--grey-900);
+  --button-primary--hover--color: var(--grey-900);
 }
