--- a/templates/search.twig
+++ b/templates/search.twig
@@ -54,7 +54,7 @@
                 <div class="col-lg-4">
                     <div class="filter-sidebar">
                         <div class="filter-button d-lg-none">
-                            <button class="btn btn-filter {{ disabled }}" data-bs-toggle="modal" data-bs-target="#filtermodal">
+                            <button class="btn btn-filter btn-primary {{ disabled }}" data-bs-toggle="modal" data-bs-target="#filtermodal">
                                 {{ 'filter'|svgicon }}
                                  {{ __( 'Filters', 'planet4-master-theme' ) }}
                              </button>
