--- a/assets/src/scss/components/_buttons.scss
+++ b/assets/src/scss/components/_buttons.scss
@@ -99,7 +99,7 @@ $primary-button-box-shadow: 0 2px 5px rgba(0, 0, 0, .25);
     &:active {
       background: $orange-hover;
       color: $white;
-      border: 1px solid $orange-hover;
+      border: 1px solid transparent;
       box-shadow: $primary-button-box-shadow;
     }
 
