--- a/assets/src/scss/new-identity/style.scss
+++ b/assets/src/scss/new-identity/style.scss
@@ -35,4 +35,11 @@
   --author-block-description-button--hover--color: var(--gp-green-800);
   --top-page-tags--tag-item--visited--color: var(--gp-green-800);
   --top-page-tags--tag-item--color: var(--gp-green-800);
+  --button-secondary--background: var(--white);
+  --button-secondary--border-color: var(--p4-dark-green-800);
+  --button-secondary--color: var(--p4-dark-green-800);
+  --button-secondary--visited--color: var(--p4-dark-green-800);
+  --button-secondary--hover--background: var(--p4-dark-green-800);
+  --button-secondary--hover--border-color: var(--p4-dark-green-800);
+  --button-secondary--hover--color: var(--white);
 }
