--- a/assets/src/scss/new-identity/style.scss
+++ b/assets/src/scss/new-identity/style.scss
@@ -3,4 +3,8 @@
   --site-footer--background: #1f4912;
   --countries-list--background: #1a3c10;
   --site-footer--copyright--background: #1a3c10;
+  --block-columns--step-number--inner--background: #d9f1c5;
+  --block-columns--step-number--background: #d9f1c5;
+  --block-columns--step-number--color: #1c1c1c;
+  --block-columns--card-header--background: #1f4912;
 }
