PLANET-6986: New layout applied to tag links
- As a part of the new identity project

--- a/assets/src/scss/new-identity/style.scss
+++ b/assets/src/scss/new-identity/style.scss
@@ -15,4 +15,14 @@
   --button-primary--color: var(--grey-900);
   --button-primary--visited--color: var(--grey-900);
   --button-primary--hover--color: var(--grey-900);
+  --post-tag-button--active--color: var(--grey-900);
+  --post-tag-button--active--background-color: var(--gp-green-200);
+  --post-tag-button--background-color: var(--gp-green-100);
+  --post-tag-button--border-color: var(--gp-green-100);
+  --post-tag-button--color: var(--grey-900);
+  --post-tag-button--font-weight: 700;
+  --post-tag-button--hover--background-color: var(--gp-green-200);
+  --post-tag-button--hover--border-color: var(--gp-green-200);
+  --post-tag-button--hover--color: var(--grey-900);
+  --post-tag-button--visited--color: var(--grey-900);
 }
