--- a/assets/src/scss/base/_typography.scss
+++ b/assets/src/scss/base/_typography.scss
@@ -101,7 +101,7 @@ h6 {
 
 a --link-- {
   &:focus {
-    outline: 2px solid rgba(0, 106, 255, 0.4);
+    outline: 2px solid #99c3ff;
     outline-offset: 2px;
     border-radius: 4px;
   }
