--- a/assets/src/scss/components/_buttons.scss
+++ b/assets/src/scss/components/_buttons.scss
@@ -284,6 +284,7 @@ button.load-more-mt {
 
     &:hover {
       background-color: var(--link--color);
+      border-color: var(--link--color);
       color: $white;
     }
 
