PLANET-6991 Apply the new dark green color to contextual links
This change is only visible if the new identity styles are enabled

--- a/assets/src/scss/new-identity/style.scss
+++ b/assets/src/scss/new-identity/style.scss
@@ -33,4 +33,6 @@
   --author-block--background: var(--beige-100);
   --author-block-description-button--color: var(--gp-green-800);
   --author-block-description-button--hover--color: var(--gp-green-800);
+  --top-page-tags--tag-item--visited--color: var(--gp-green-800);
+  --top-page-tags--tag-item--color: var(--gp-green-800);
 }
