PLANET-6997 Apply the new colors to cookies box
These are part of the new identity styles

--- a/assets/src/scss/layout/_cookies.scss
+++ b/assets/src/scss/layout/_cookies.scss
@@ -64,7 +64,7 @@
     font-size: 14px;
   }
 
-  .btn-primary {
+  .btn-donate {
     margin-top: $sp-2;
   }
 
@@ -72,11 +72,11 @@
     display: flex;
     justify-content: space-between;
 
-    .btn-primary:only-child {
+    .btn-donate:only-child {
       width: 100%;
     }
 
-    .btn-primary,
+    .btn-donate,
     .btn-secondary {
       width: auto;
       flex-grow: 1;
