--- a/templates/cookies.twig
+++ b/templates/cookies.twig
@@ -19,7 +19,7 @@
                     </button>
                 {% endif %}
                 <button
-                    class="btn btn-primary p-0 allow-all-cookies"
+                    class="btn btn-donate p-0 allow-all-cookies"
                     data-ga-category="Cookies box"
                     data-ga-action="Accept all cookies"
                 >
