--- a/templates/cookies/cookies_settings.twig
+++ b/templates/cookies/cookies_settings.twig
@@ -55,7 +55,7 @@
             {{ __( 'Allow all', 'planet4-master-theme' ) }}
         </button>
         <button
-            class="btn btn-primary"
+            class="btn btn-donate"
             id="save-cookies-settings"
             data-ga-category="Cookies box"
             data-ga-action="Save preferences"
