--- a/assets/src/scss/layout/_cookies-settings.scss
+++ b/assets/src/scss/layout/_cookies-settings.scss
@@ -106,7 +106,7 @@
   &.with-reject-all {
     flex-wrap: wrap;
 
-    .btn-primary {
+    .btn-donate {
       width: 100%;
       margin-top: $sp-2;
     }
@@ -119,7 +119,7 @@
         margin-inline-end: $sp-2;
       }
 
-      .btn-primary {
+      .btn-donate {
         flex-grow: 1;
         width: auto;
         margin-top: 0;
