--- a/assets/src/scss/layout/_navbar.scss
+++ b/assets/src/scss/layout/_navbar.scss
@@ -1,9 +1,3 @@
-$menu-height: 68px;
-$menu-height-large: 68px;
-$menu-height-small: 60px;
-$min-height: 40px;
-$navbar-default-height: 60px;
-
 .top-navigation {
   _-- {
     background: $dark-blue;
@@ -282,7 +276,7 @@ a.nav-link:hover:before,
   font-weight: 700;
 
   @include large-and-up {
-    line-height: $menu-height;
+    line-height: var(--navbar-menu-height);
 
     &:hover {
       .nav-submenu {
@@ -306,7 +300,7 @@ a.nav-link:hover:before,
 
 .navigation-bar_min {
   --top-navigation-min-- {
-    height: $min-height;
+    height: var(--navbar-menu-min-height);
   }
 
   justify-content: center;
