--- a/assets/src/scss/layout/navbar/_search.scss
+++ b/assets/src/scss/layout/navbar/_search.scss
@@ -7,19 +7,19 @@
   height: 56px;
   inset-inline-start: 0;
   position: fixed;
-  top: $menu-height-small;
+  top: var(--navbar-menu-height--small);
   z-index: 3;
   width: 100%;
 
   .admin-bar & {
-    top: $menu-height-small + 46px;
+    top: calc(var(--navbar-menu-height--small) + 46px);
 
     @media (min-width: 783px) {
-      top: $menu-height-small + 32px;
+      top: calc(var(--navbar-menu-height--small) + 32px);
     }
 
     @include large-and-up {
-      top: $menu-height + 32px;
+      top: calc(var(--navbar-menu-height) + 32px);
     }
   }
 
@@ -55,7 +55,7 @@
   }
 
   @include large-and-up {
-    top: $menu-height;
+    top: var(--navbar-menu-height);
   }
 
   @include x-large-and-up {
@@ -82,7 +82,7 @@
   display: inline-block;
   flex-grow: 1;
   font-size: $font-size-sm;
-  line-height: $menu-height;
+  line-height: var(--navbar-menu-height);
   padding-inline: 12px 8px;
   width: auto;
 
@@ -137,7 +137,7 @@
 
   @include x-large-and-up {
     display: inline-block;
-    line-height: $menu-height;
+    line-height: var(--navbar-menu-height);
   }
 }
 
