--- a/assets/src/scss/pages/_page.scss
+++ b/assets/src/scss/pages/_page.scss
@@ -1,7 +1,3 @@
-$menu-height-small: 3.375rem;
-$menu-height-large: 3.75rem;
-$min-height: 40px;
-
 .page-content {
   > * {
     position: relative;
@@ -14,10 +10,10 @@ $min-height: 40px;
   }
 
   &.no-page-title {
-    padding-top: $menu-height-small;
+    padding-top: var(--navbar-menu-height--small);
 
-    @include medium-and-up {
-      padding-top: $menu-height-large;
+    @include large-and-up {
+      padding-top: var(--navbar-menu-height--large);
     }
 
     & > p:first-child {
@@ -40,19 +36,23 @@ $min-height: 40px;
       }
     }
 
+    & > .wp-block-group {
+      margin-top: 0;
+    }
+
     & > .wp-block-image:first-child {
       margin-top: 0;
     }
 
     .navigation-bar_min ~ & {
-      padding-top: $min-height;
+      padding-top: var(--navbar-menu-min-height);
     }
   }
 }
 
 .with-mobile-tabs ~ :not(.page-header) + .page-content {
   @include medium-and-less {
-    padding-top: calc(#{$menu-height-small} + 50px);
+    padding-top: calc(var(--navbar-menu-height--small) + 50px);
   }
 }
 
