PLANET-7016 Apply the new colors to the Table block
- Added new identity colors for the Table block

--- a/assets/src/scss/layout/_tables.scss
+++ b/assets/src/scss/layout/_tables.scss
@@ -42,7 +42,7 @@
       font-size: $font-size-xs;
       padding: $sp-2x;
       vertical-align: top;
-      color: $table-font-color;
+      color: var(--body--color);
 
       @include mobile-only {
         min-width: 300px;
