Update transparent buttons for custom text colors
This would be needed in the Highlighted CTA pattern for example if editors use a different text color

--- a/assets/src/scss/base/_palette.scss
+++ b/assets/src/scss/base/_palette.scss
@@ -19,6 +19,10 @@ $palette: (
 @each $name, $color in $palette {
   .has-#{$name}-color {
     color: $color;
+
+    --transparent-button--border-color: #{$color};
+    --transparent-button--color: #{$color};
+    --transparent-button--hover--background: #{$color};
   }
 
   .has-#{$name}-background-color {
