--- a/assets/src/scss/bootstrap-build.scss
+++ b/assets/src/scss/bootstrap-build.scss
@@ -21,8 +21,8 @@ Text Domain: planet4-master-theme
 @import "vendors/bootstrap";
 @import "~bootstrap/scss/functions";
 @import "~bootstrap/scss/variables";
+// @import "~bootstrap/scss/maps"; // Will be included after bootstrap 5.2
 @import "~bootstrap/scss/mixins";
-@import "~bootstrap/scss/maps";
 @import "~bootstrap/scss/utilities";
 
 // Layout & components
