PLANET-7014 Apply new identity colors to Accordion block
These will only be applied if the new identity styles are enabled

--- a/assets/src/scss/new-identity/style.scss
+++ b/assets/src/scss/new-identity/style.scss
@@ -62,6 +62,11 @@
   --link--color: var(--grey-900);
   --link--visited--color: var(--grey-900);
   --link--hover--color: var(--grey-900);
+  --accordion-block-dark-style--background: var(--p4-dark-green-800);
+  --accordion-block-dark-style--hover--background: var(--p4-dark-green-900);
+  --accordion-block-light-style--background: var(--beige-100);
+  --accordion-block-light-style--border-color: transparent;
+  --accordion-block-light-style--hover--background: var(--beige-200);
 }
 
 // Spreadsheet block new color.
