--- a/assets/src/scss/bootstrap-build.scss
+++ b/assets/src/scss/bootstrap-build.scss
@@ -21,7 +21,8 @@ Text Domain: planet4-master-theme
 @import "vendors/bootstrap";
 @import "~bootstrap/scss/functions";
 @import "~bootstrap/scss/variables";
-// @import "~bootstrap/scss/maps"; // Will be included after bootstrap 5.2
+// The maps's file is required from bootstrap 5.2 and higher
+// @import "~bootstrap/scss/maps";
 @import "~bootstrap/scss/mixins";
 @import "~bootstrap/scss/utilities";
 
